ajout de la fonction like

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,6 +4,7 @@
     <p>Mis en ligne le {{ createdDate }}</p>
     <img [src]="imageURL" [alt]="title" />
     <p>{{ description }}</p>
+    <button (click)="onAddSnap()">Oh Snap !</button>
     <p>👌 {{ snaps }}</p>
   </div>
 </div>
