--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,10 +1,10 @@
 <div class="card-container">
   <div class="face-snap-card">
-    <h2>{{ title }}</h2>
-    <p>Mis en ligne le {{ createdDate }}</p>
-    <img [src]="imageURL" [alt]="title" />
-    <p>{{ description }}</p>
+    <h2>{{ faceSnap.title }}</h2>
+    <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+    <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
+    <p>{{ faceSnap.description }}</p>
     <button (click)="onSnap()">{{ buttonText }}</button>
-    <p>👌 {{ snaps }}</p>
+    <p>👌 {{ faceSnap.snaps }}</p>
   </div>
 </div>
