creation d'un tableau pour stocker les card facesnap

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,6 +4,7 @@
     <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
     <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
     <p>{{ faceSnap.description }}</p>
+    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
     <button (click)="onSnap()">{{ buttonText }}</button>
     <p>👌 {{ faceSnap.snaps }}</p>
   </div>
