--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,11 +1,23 @@
 <div class="card-container">
   <div class="face-snap-card">
-    <h2>{{ faceSnap.title }}</h2>
-    <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+    <div class="title">
+      <h2>{{ faceSnap.title }}</h2>
+      <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+    </div>
     <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
-    <p>{{ faceSnap.description }}</p>
-    <p *ngIf="faceSnap.location">Photo prise à {{ faceSnap.location }}</p>
-    <button (click)="onSnap()">{{ buttonText }}</button>
-    <p>👌 {{ faceSnap.snaps }}</p>
+    <div class="text-card">
+      <p>{{ faceSnap.description }}</p>
+    </div>
+    <div class="snaps-location">
+      <div class="snaps">
+        <button (click)="onSnap()">{{ buttonText }}</button>
+        <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps + ', 0)' }"
+          ><p>👌 {{ faceSnap.snaps }}</p></span
+        >
+      </div>
+      <p class="location" *ngIf="faceSnap.location">
+        📍 {{ faceSnap.location }}
+      </p>
+    </div>
   </div>
 </div>
