ajout d'une fonctionnalité : la card change de couleur lorsqu'elle est likée

--- a/src/app/face-snap/face-snap.component.scss
+++ b/src/app/face-snap/face-snap.component.scss
@@ -77,3 +77,7 @@ button:hover {
     9.9px 16.4px 29.2px rgba(0, 0, 0, 0.031),
     27px 45px 80px rgba(0, 0, 0, 0.022);
 }
+
+.snapped {
+  background-color: #672f3f38;
+}
