--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,5 +1,8 @@
 <div class="card-container">
-  <div class="face-snap-card">
+  <div
+    class="face-snap-card"
+    [ngClass]="{ snapped: buttonText === 'Oops, UnSnap !' }"
+  >
     <div class="title">
       <h2>{{ faceSnap.title }}</h2>
       <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
