changement du format de la date et formatage d'angular en français

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -5,7 +5,9 @@
   >
     <div class="title">
       <h2>{{ faceSnap.title }}</h2>
-      <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
+      <p>
+        Mis en ligne {{ faceSnap.createdDate | date : "à HH:mm, le d MMM yyy" }}
+      </p>
     </div>
     <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
     <div class="text-card">
