--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,6 @@
-<p>landing-page works!</p>
+<div class="landing-block">
+  <img src="assets/16366495596929_snapface.png" alt="logo" />
+  <div class="landing-links">
+    <a>Continuer vers Snapface</a>
+  </div>
+</div>
