custom button landing page et header

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="landing-block">
   <img src="assets/16366495596929_snapface.png" alt="logo" />
   <div class="landing-links">
-    <a routerLink="facesnaps">Continuer vers Snapface</a>
+    <button routerLink="facesnaps">Continuer vers Snapface</button>
   </div>
 </div>
