--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,6 +3,13 @@ header {
   background-color: #eee;
   margin-bottom: 20px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+h1 {
+  font-size: 1.5rem;
 }
 
 a {
