--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -9,3 +9,13 @@
   width: 100%;
   text-align: center;
 }
+
+button {
+  border: none;
+  padding: 10px;
+  color: white;
+  background-color: #c4a4ad9f;
+  border: 1px #4d4547eb;
+  border-radius: 10px;
+  cursor: pointer;
+}
