--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,18 @@
   font-family: "Roboto", Helvetica, sans-serif;
   font-size: 16px;
 }
+
+button {
+  border: none;
+  padding: 5px;
+  color: white;
+  background-color: #c4a4ad9f;
+  border: 1px #4d4547eb;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  cursor: pointer;
+  &:active {
+    transform: translate(1px, 1px);
+    box-shadow: lightgray 0 0 5px;
+  }
+}
