--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,28 +1,9 @@
-<div class="card-container">
-  <div
-    class="face-snap-card"
-    [ngClass]="{ snapped: buttonText === 'Oops, UnSnap !' }"
-  >
+<div class="list">
+  <div class="list-card">
     <div class="title">
       <h2>{{ faceSnap.title }}</h2>
-      <p>
-        Mis en ligne {{ faceSnap.createdDate | date : "à HH:mm, le d MMM yyy" }}
-      </p>
-    </div>
-    <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
-    <div class="text-card">
       <p>{{ faceSnap.description }}</p>
     </div>
-    <div class="snaps-location">
-      <div class="snaps">
-        <button (click)="onSnap()">{{ buttonText }}</button>
-        <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps + ', 0)' }"
-          ><p>👌 {{ faceSnap.snaps }}</p></span
-        >
-      </div>
-      <p class="location" *ngIf="faceSnap.location">
-        📍 {{ faceSnap.location }}
-      </p>
-    </div>
+    <button (click)="onViewFaceSnap()">view</button>
   </div>
 </div>
