--- a/src/app/single-face-snap-component/single-face-snap-component.component.html
+++ b/src/app/single-face-snap-component/single-face-snap-component.component.html
@@ -1,1 +1,31 @@
-<p>single-face-snap-component works!</p>
+<div class="card-container">
+  <div
+    class="face-snap-card"
+    [ngClass]="{ snapped: buttonText === 'Oops, UnSnap !' }"
+  >
+    <div class="title">
+      <div class="back-title">
+        <h2>{{ faceSnap.title }}</h2>
+        <a routerLink="/facesnaps">Back</a>
+      </div>
+      <p>
+        Mis en ligne {{ faceSnap.createdDate | date : "à HH:mm, le d MMM yyy" }}
+      </p>
+    </div>
+    <img [src]="faceSnap.imageURL" [alt]="faceSnap.title" />
+    <div class="text-card">
+      <p>{{ faceSnap.description }}</p>
+    </div>
+    <div class="snaps-location">
+      <div class="snaps">
+        <button (click)="onSnap()">{{ buttonText }}</button>
+        <span [ngStyle]="{ color: 'rgb(0,' + faceSnap.snaps + ', 0)' }"
+          ><p>👌 {{ faceSnap.snaps }}</p></span
+        >
+      </div>
+      <p class="location" *ngIf="faceSnap.location">
+        📍 {{ faceSnap.location }}
+      </p>
+    </div>
+  </div>
+</div>
