--- a/src/app/single-face-snap-component/single-face-snap-component.component.scss
+++ b/src/app/single-face-snap-component/single-face-snap-component.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 150px;
+  padding: 50px;
 }
 
 .face-snap-card {
@@ -21,6 +21,12 @@
   img {
     width: 100%;
   }
+}
+
+.back-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .title {
